src/test/ui/typeck/typeck-negative-impls-builtin.stderr
error[E0192]: invalid negative impl
  --> $DIR/typeck-negative-impls-builtin.rs:9:6
   |
LL | impl !TestTrait for TestType {}
   |      ^^^^^^^^^^
   |
   = note: negative impls are only allowed for auto traits, like `Send` and `Sync`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0192`.
